// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StartPage/> should equals to snapshot of StartPage 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
    <div>
      <section
        class="sc-bZQynM jXrBaw"
      >
        <div
          class="modal"
        >
          <section
            class="modal-main"
          >
            <div
              class="sc-EHOje hYgIFK"
            >
              <form
                class=""
              >
                <div
                  class="sc-ifAKCX drmYPe"
                >
                  <button
                    class="close"
                    type="button"
                  >
                    <span>
                      ×
                    </span>
                  </button>
                  <h2>
                    Edit movie
                  </h2>
                </div>
                <div
                  class="Edit movie form-group"
                >
                  <label
                    class="form-label"
                  >
                    Movie id
                  </label>
                  <input
                    class="form-control"
                    name="id"
                    placeholder="Id"
                    readonly=""
                    type="number"
                    value="1"
                  />
                  <label
                    class="form-label"
                  >
                    Title
                  </label>
                  <input
                    class="form-control"
                    name="title"
                    placeholder="Title"
                    type="title"
                    value=""
                  />
                  <label
                    class="form-label"
                  >
                    Release date
                  </label>
                  <input
                    class="form-control"
                    name="date"
                    placeholder="Select Date"
                    type="date"
                    value=""
                  />
                  <label
                    class="form-label"
                  >
                    Movie URL
                  </label>
                  <input
                    class="form-control"
                    name="url"
                    placeholder="Movie URL here"
                    type="url"
                    value=""
                  />
                  <label
                    class="form-label"
                  >
                    Example select
                  </label>
                  <div
                    class="select css-2b097c-container"
                  >
                    <div
                      class=" css-yk16xz-control"
                    >
                      <div
                        class=" css-g1d714-ValueContainer"
                      >
                        <div
                          class="css-1rhbuit-multiValue"
                        >
                          <div
                            class="css-12jo7m5"
                          >
                            Comedy
                          </div>
                          <div
                            class="css-xb97g8"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-6q0nyr-Svg"
                              focusable="false"
                              height="14"
                              viewBox="0 0 20 20"
                              width="14"
                            >
                              <path
                                d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                              />
                            </svg>
                          </div>
                        </div>
                        <div
                          class="css-1rhbuit-multiValue"
                        >
                          <div
                            class="css-12jo7m5"
                          >
                            Action
                          </div>
                          <div
                            class="css-xb97g8"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-6q0nyr-Svg"
                              focusable="false"
                              height="14"
                              viewBox="0 0 20 20"
                              width="14"
                            >
                              <path
                                d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                              />
                            </svg>
                          </div>
                        </div>
                        <div
                          class="css-b8ldur-Input"
                        >
                          <div
                            class=""
                            style="display: inline-block;"
                          >
                            <input
                              aria-autocomplete="list"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              id="react-select-2-input"
                              spellcheck="false"
                              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                            <div
                              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class=" css-1hb7zxy-IndicatorsContainer"
                      >
                        <div
                          aria-hidden="true"
                          class=" css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                        <span
                          class=" css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <label
                    class="form-label"
                  >
                    Overview
                  </label>
                  <input
                    class="form-control"
                    name="overview"
                    placeholder="Overview here"
                    type="text"
                    value=""
                  />
                  <label
                    class="form-label"
                  >
                    Runtime
                  </label>
                  <input
                    class="form-control"
                    name="runtime"
                    placeholder="Runtime here"
                    type="number"
                    value=""
                  />
                </div>
                <div
                  class="sc-bxivhb iodYpz"
                >
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    Reset
                  </button>
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    Save
                  </button>
                </div>
              </form>
            </div>
          </section>
        </div>
      </section>
      <section
        class="sc-gzVnrw kUQjQA"
      >
        <div
          class="modal"
        >
          <section
            class="modal-main"
          >
            <div
              class="sc-ifAKCX drmYPe"
            >
              <button
                class="close"
                type="button"
              >
                <span>
                  ×
                </span>
              </button>
              <h2>
                Delete Movie
              </h2>
            </div>
            <p>
              Are you sure you want to delete this movie?
            </p>
            <button
              class="btn btn-primary"
              type="button"
            >
              Confirm
            </button>
          </section>
        </div>
      </section>
      <header
        class="sc-gqjmRU bLsPVA"
      >
        <div
          class="sc-iwsKbI hgHcqO"
        >
          <button
            class="add-movie btn btn-outline-danger"
            type="button"
          >
            + Add movie
          </button>
          <h1>
            Find your movie
          </h1>
        </div>
        <div
          class="sc-dnqmqq jjsafO mb-3 input-group"
        >
          <input
            class="form-control"
            placeholder="Please write the film name"
            value=""
          />
          <div
            class="input-group-append"
          >
            <button
              class="btn btn-outline-danger"
              disabled=""
              type="button"
            >
              Search
            </button>
          </div>
        </div>
        <div
          class="types"
        >
          <div
            class="nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="All"
                href="#"
                role="button"
              >
                All
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="Documentary"
                href="#"
                role="button"
              >
                Documentary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="Comedy"
                href="#"
                role="button"
              >
                Comedy
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="Horror"
                href="#"
                role="button"
              >
                Horror
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="Crime"
                href="#"
                role="button"
              >
                Crime
              </a>
            </div>
          </div>
          <div>
            <p>
              Sort by
            </p>
            <div
              class="sc-gZMcBi hWBHcG dropdown"
            >
              <div
                class="drop dropdown"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="dropdown-toggle btn btn-secondary"
                  type="button"
                >
                  Rating
                </button>
                <div
                  aria-hidden="true"
                  class="dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Release date
                  </button>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Rating
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="count-movie"
        >
          <p
            class="count"
          >
            1
             Movies found
          </p>
        </div>
      </header>
      <h3
        class="sc-VigVT hBdmWj"
      >
        No movie found
      </h3>
    </div>
  </body>,
  "container": <div>
    <section
      class="sc-bZQynM jXrBaw"
    >
      <div
        class="modal"
      >
        <section
          class="modal-main"
        >
          <div
            class="sc-EHOje hYgIFK"
          >
            <form
              class=""
            >
              <div
                class="sc-ifAKCX drmYPe"
              >
                <button
                  class="close"
                  type="button"
                >
                  <span>
                    ×
                  </span>
                </button>
                <h2>
                  Edit movie
                </h2>
              </div>
              <div
                class="Edit movie form-group"
              >
                <label
                  class="form-label"
                >
                  Movie id
                </label>
                <input
                  class="form-control"
                  name="id"
                  placeholder="Id"
                  readonly=""
                  type="number"
                  value="1"
                />
                <label
                  class="form-label"
                >
                  Title
                </label>
                <input
                  class="form-control"
                  name="title"
                  placeholder="Title"
                  type="title"
                  value=""
                />
                <label
                  class="form-label"
                >
                  Release date
                </label>
                <input
                  class="form-control"
                  name="date"
                  placeholder="Select Date"
                  type="date"
                  value=""
                />
                <label
                  class="form-label"
                >
                  Movie URL
                </label>
                <input
                  class="form-control"
                  name="url"
                  placeholder="Movie URL here"
                  type="url"
                  value=""
                />
                <label
                  class="form-label"
                >
                  Example select
                </label>
                <div
                  class="select css-2b097c-container"
                >
                  <div
                    class=" css-yk16xz-control"
                  >
                    <div
                      class=" css-g1d714-ValueContainer"
                    >
                      <div
                        class="css-1rhbuit-multiValue"
                      >
                        <div
                          class="css-12jo7m5"
                        >
                          Comedy
                        </div>
                        <div
                          class="css-xb97g8"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-1rhbuit-multiValue"
                      >
                        <div
                          class="css-12jo7m5"
                        >
                          Action
                        </div>
                        <div
                          class="css-xb97g8"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-2-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                          />
                        </svg>
                      </div>
                      <span
                        class=" css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <label
                  class="form-label"
                >
                  Overview
                </label>
                <input
                  class="form-control"
                  name="overview"
                  placeholder="Overview here"
                  type="text"
                  value=""
                />
                <label
                  class="form-label"
                >
                  Runtime
                </label>
                <input
                  class="form-control"
                  name="runtime"
                  placeholder="Runtime here"
                  type="number"
                  value=""
                />
              </div>
              <div
                class="sc-bxivhb iodYpz"
              >
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Reset
                </button>
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Save
                </button>
              </div>
            </form>
          </div>
        </section>
      </div>
    </section>
    <section
      class="sc-gzVnrw kUQjQA"
    >
      <div
        class="modal"
      >
        <section
          class="modal-main"
        >
          <div
            class="sc-ifAKCX drmYPe"
          >
            <button
              class="close"
              type="button"
            >
              <span>
                ×
              </span>
            </button>
            <h2>
              Delete Movie
            </h2>
          </div>
          <p>
            Are you sure you want to delete this movie?
          </p>
          <button
            class="btn btn-primary"
            type="button"
          >
            Confirm
          </button>
        </section>
      </div>
    </section>
    <header
      class="sc-gqjmRU bLsPVA"
    >
      <div
        class="sc-iwsKbI hgHcqO"
      >
        <button
          class="add-movie btn btn-outline-danger"
          type="button"
        >
          + Add movie
        </button>
        <h1>
          Find your movie
        </h1>
      </div>
      <div
        class="sc-dnqmqq jjsafO mb-3 input-group"
      >
        <input
          class="form-control"
          placeholder="Please write the film name"
          value=""
        />
        <div
          class="input-group-append"
        >
          <button
            class="btn btn-outline-danger"
            disabled=""
            type="button"
          >
            Search
          </button>
        </div>
      </div>
      <div
        class="types"
      >
        <div
          class="nav"
        >
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rb-event-key="All"
              href="#"
              role="button"
            >
              All
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rb-event-key="Documentary"
              href="#"
              role="button"
            >
              Documentary
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rb-event-key="Comedy"
              href="#"
              role="button"
            >
              Comedy
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rb-event-key="Horror"
              href="#"
              role="button"
            >
              Horror
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rb-event-key="Crime"
              href="#"
              role="button"
            >
              Crime
            </a>
          </div>
        </div>
        <div>
          <p>
            Sort by
          </p>
          <div
            class="sc-gZMcBi hWBHcG dropdown"
          >
            <div
              class="drop dropdown"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-secondary"
                type="button"
              >
                Rating
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Release date
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Rating
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="count-movie"
      >
        <p
          class="count"
        >
          1
           Movies found
        </p>
      </div>
    </header>
    <h3
      class="sc-VigVT hBdmWj"
    >
      No movie found
    </h3>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<StartPage/> should equals to snapshot of StartPage when data is not empty 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
    <div>
      <section
        class="sc-bZQynM jXrBaw"
      >
        <div
          class="modal"
        >
          <section
            class="modal-main"
          >
            <div
              class="sc-EHOje hYgIFK"
            >
              <form
                class=""
              >
                <div
                  class="sc-ifAKCX drmYPe"
                >
                  <button
                    class="close"
                    type="button"
                  >
                    <span>
                      ×
                    </span>
                  </button>
                  <h2>
                    Edit movie
                  </h2>
                </div>
                <div
                  class="Edit movie form-group"
                >
                  <label
                    class="form-label"
                  >
                    Movie id
                  </label>
                  <input
                    class="form-control"
                    name="id"
                    placeholder="Id"
                    readonly=""
                    type="number"
                    value="1"
                  />
                  <label
                    class="form-label"
                  >
                    Title
                  </label>
                  <input
                    class="form-control"
                    name="title"
                    placeholder="Title"
                    type="title"
                    value=""
                  />
                  <label
                    class="form-label"
                  >
                    Release date
                  </label>
                  <input
                    class="form-control"
                    name="date"
                    placeholder="Select Date"
                    type="date"
                    value=""
                  />
                  <label
                    class="form-label"
                  >
                    Movie URL
                  </label>
                  <input
                    class="form-control"
                    name="url"
                    placeholder="Movie URL here"
                    type="url"
                    value=""
                  />
                  <label
                    class="form-label"
                  >
                    Example select
                  </label>
                  <div
                    class="select css-2b097c-container"
                  >
                    <div
                      class=" css-yk16xz-control"
                    >
                      <div
                        class=" css-g1d714-ValueContainer"
                      >
                        <div
                          class="css-1rhbuit-multiValue"
                        >
                          <div
                            class="css-12jo7m5"
                          >
                            Comedy
                          </div>
                          <div
                            class="css-xb97g8"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-6q0nyr-Svg"
                              focusable="false"
                              height="14"
                              viewBox="0 0 20 20"
                              width="14"
                            >
                              <path
                                d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                              />
                            </svg>
                          </div>
                        </div>
                        <div
                          class="css-1rhbuit-multiValue"
                        >
                          <div
                            class="css-12jo7m5"
                          >
                            Action
                          </div>
                          <div
                            class="css-xb97g8"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-6q0nyr-Svg"
                              focusable="false"
                              height="14"
                              viewBox="0 0 20 20"
                              width="14"
                            >
                              <path
                                d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                              />
                            </svg>
                          </div>
                        </div>
                        <div
                          class="css-b8ldur-Input"
                        >
                          <div
                            class=""
                            style="display: inline-block;"
                          >
                            <input
                              aria-autocomplete="list"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              id="react-select-3-input"
                              spellcheck="false"
                              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                            <div
                              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class=" css-1hb7zxy-IndicatorsContainer"
                      >
                        <div
                          aria-hidden="true"
                          class=" css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                        <span
                          class=" css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <label
                    class="form-label"
                  >
                    Overview
                  </label>
                  <input
                    class="form-control"
                    name="overview"
                    placeholder="Overview here"
                    type="text"
                    value=""
                  />
                  <label
                    class="form-label"
                  >
                    Runtime
                  </label>
                  <input
                    class="form-control"
                    name="runtime"
                    placeholder="Runtime here"
                    type="number"
                    value=""
                  />
                </div>
                <div
                  class="sc-bxivhb iodYpz"
                >
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    Reset
                  </button>
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    Save
                  </button>
                </div>
              </form>
            </div>
          </section>
        </div>
      </section>
      <section
        class="sc-gzVnrw kUQjQA"
      >
        <div
          class="modal"
        >
          <section
            class="modal-main"
          >
            <div
              class="sc-ifAKCX drmYPe"
            >
              <button
                class="close"
                type="button"
              >
                <span>
                  ×
                </span>
              </button>
              <h2>
                Delete Movie
              </h2>
            </div>
            <p>
              Are you sure you want to delete this movie?
            </p>
            <button
              class="btn btn-primary"
              type="button"
            >
              Confirm
            </button>
          </section>
        </div>
      </section>
      <header
        class="sc-gqjmRU bLsPVA"
      >
        <div
          class="sc-iwsKbI hgHcqO"
        >
          <button
            class="add-movie btn btn-outline-danger"
            type="button"
          >
            + Add movie
          </button>
          <h1>
            Find your movie
          </h1>
        </div>
        <div
          class="sc-dnqmqq jjsafO mb-3 input-group"
        >
          <input
            class="form-control"
            placeholder="Please write the film name"
            value=""
          />
          <div
            class="input-group-append"
          >
            <button
              class="btn btn-outline-danger"
              disabled=""
              type="button"
            >
              Search
            </button>
          </div>
        </div>
        <div
          class="types"
        >
          <div
            class="nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="All"
                href="#"
                role="button"
              >
                All
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="Documentary"
                href="#"
                role="button"
              >
                Documentary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="Comedy"
                href="#"
                role="button"
              >
                Comedy
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="Horror"
                href="#"
                role="button"
              >
                Horror
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="Crime"
                href="#"
                role="button"
              >
                Crime
              </a>
            </div>
          </div>
          <div>
            <p>
              Sort by
            </p>
            <div
              class="sc-gZMcBi hWBHcG dropdown"
            >
              <div
                class="drop dropdown"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="dropdown-toggle btn btn-secondary"
                  type="button"
                >
                  Rating
                </button>
                <div
                  aria-hidden="true"
                  class="dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Release date
                  </button>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Rating
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="count-movie"
        >
          <p
            class="count"
          >
            1
             Movies found
          </p>
        </div>
      </header>
      <section
        class="sc-jTzLTM eHaMNc"
      >
        <div
          class="sc-htpNat hUfMet card"
        >
          <img
            class="card-img-top"
          />
          <div
            class="card-body"
          >
            <div
              class="sc-bwzfXH bdtHmX card-title h5"
            >
              <a
                href="/movies/11"
              />
              <span
                class="badge badge-secondary"
              >
                test
              </span>
            </div>
            <p
              class="card-text"
            >
              <button
                href="#"
                info="Comedy"
                type="submit"
                value="Comedy"
                variant="secondary"
              >
                Comedy
              </button>
            </p>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="sc-bZQynM jXrBaw"
    >
      <div
        class="modal"
      >
        <section
          class="modal-main"
        >
          <div
            class="sc-EHOje hYgIFK"
          >
            <form
              class=""
            >
              <div
                class="sc-ifAKCX drmYPe"
              >
                <button
                  class="close"
                  type="button"
                >
                  <span>
                    ×
                  </span>
                </button>
                <h2>
                  Edit movie
                </h2>
              </div>
              <div
                class="Edit movie form-group"
              >
                <label
                  class="form-label"
                >
                  Movie id
                </label>
                <input
                  class="form-control"
                  name="id"
                  placeholder="Id"
                  readonly=""
                  type="number"
                  value="1"
                />
                <label
                  class="form-label"
                >
                  Title
                </label>
                <input
                  class="form-control"
                  name="title"
                  placeholder="Title"
                  type="title"
                  value=""
                />
                <label
                  class="form-label"
                >
                  Release date
                </label>
                <input
                  class="form-control"
                  name="date"
                  placeholder="Select Date"
                  type="date"
                  value=""
                />
                <label
                  class="form-label"
                >
                  Movie URL
                </label>
                <input
                  class="form-control"
                  name="url"
                  placeholder="Movie URL here"
                  type="url"
                  value=""
                />
                <label
                  class="form-label"
                >
                  Example select
                </label>
                <div
                  class="select css-2b097c-container"
                >
                  <div
                    class=" css-yk16xz-control"
                  >
                    <div
                      class=" css-g1d714-ValueContainer"
                    >
                      <div
                        class="css-1rhbuit-multiValue"
                      >
                        <div
                          class="css-12jo7m5"
                        >
                          Comedy
                        </div>
                        <div
                          class="css-xb97g8"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-1rhbuit-multiValue"
                      >
                        <div
                          class="css-12jo7m5"
                        >
                          Action
                        </div>
                        <div
                          class="css-xb97g8"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-3-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                          />
                        </svg>
                      </div>
                      <span
                        class=" css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <label
                  class="form-label"
                >
                  Overview
                </label>
                <input
                  class="form-control"
                  name="overview"
                  placeholder="Overview here"
                  type="text"
                  value=""
                />
                <label
                  class="form-label"
                >
                  Runtime
                </label>
                <input
                  class="form-control"
                  name="runtime"
                  placeholder="Runtime here"
                  type="number"
                  value=""
                />
              </div>
              <div
                class="sc-bxivhb iodYpz"
              >
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Reset
                </button>
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Save
                </button>
              </div>
            </form>
          </div>
        </section>
      </div>
    </section>
    <section
      class="sc-gzVnrw kUQjQA"
    >
      <div
        class="modal"
      >
        <section
          class="modal-main"
        >
          <div
            class="sc-ifAKCX drmYPe"
          >
            <button
              class="close"
              type="button"
            >
              <span>
                ×
              </span>
            </button>
            <h2>
              Delete Movie
            </h2>
          </div>
          <p>
            Are you sure you want to delete this movie?
          </p>
          <button
            class="btn btn-primary"
            type="button"
          >
            Confirm
          </button>
        </section>
      </div>
    </section>
    <header
      class="sc-gqjmRU bLsPVA"
    >
      <div
        class="sc-iwsKbI hgHcqO"
      >
        <button
          class="add-movie btn btn-outline-danger"
          type="button"
        >
          + Add movie
        </button>
        <h1>
          Find your movie
        </h1>
      </div>
      <div
        class="sc-dnqmqq jjsafO mb-3 input-group"
      >
        <input
          class="form-control"
          placeholder="Please write the film name"
          value=""
        />
        <div
          class="input-group-append"
        >
          <button
            class="btn btn-outline-danger"
            disabled=""
            type="button"
          >
            Search
          </button>
        </div>
      </div>
      <div
        class="types"
      >
        <div
          class="nav"
        >
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rb-event-key="All"
              href="#"
              role="button"
            >
              All
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rb-event-key="Documentary"
              href="#"
              role="button"
            >
              Documentary
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rb-event-key="Comedy"
              href="#"
              role="button"
            >
              Comedy
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rb-event-key="Horror"
              href="#"
              role="button"
            >
              Horror
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rb-event-key="Crime"
              href="#"
              role="button"
            >
              Crime
            </a>
          </div>
        </div>
        <div>
          <p>
            Sort by
          </p>
          <div
            class="sc-gZMcBi hWBHcG dropdown"
          >
            <div
              class="drop dropdown"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-secondary"
                type="button"
              >
                Rating
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Release date
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Rating
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="count-movie"
      >
        <p
          class="count"
        >
          1
           Movies found
        </p>
      </div>
    </header>
    <section
      class="sc-jTzLTM eHaMNc"
    >
      <div
        class="sc-htpNat hUfMet card"
      >
        <img
          class="card-img-top"
        />
        <div
          class="card-body"
        >
          <div
            class="sc-bwzfXH bdtHmX card-title h5"
          >
            <a
              href="/movies/11"
            />
            <span
              class="badge badge-secondary"
            >
              test
            </span>
          </div>
          <p
            class="card-text"
          >
            <button
              href="#"
              info="Comedy"
              type="submit"
              value="Comedy"
              variant="secondary"
            >
              Comedy
            </button>
          </p>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<StartPage/> should equals to snapshot of StartPage when data is null 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
    <div>
      <section
        class="sc-bZQynM jXrBaw"
      >
        <div
          class="modal"
        >
          <section
            class="modal-main"
          >
            <div
              class="sc-EHOje hYgIFK"
            >
              <form
                class=""
              >
                <div
                  class="sc-ifAKCX drmYPe"
                >
                  <button
                    class="close"
                    type="button"
                  >
                    <span>
                      ×
                    </span>
                  </button>
                  <h2>
                    Edit movie
                  </h2>
                </div>
                <div
                  class="Edit movie form-group"
                >
                  <label
                    class="form-label"
                  >
                    Movie id
                  </label>
                  <input
                    class="form-control"
                    name="id"
                    placeholder="Id"
                    readonly=""
                    type="number"
                    value="1"
                  />
                  <label
                    class="form-label"
                  >
                    Title
                  </label>
                  <input
                    class="form-control"
                    name="title"
                    placeholder="Title"
                    type="title"
                    value=""
                  />
                  <label
                    class="form-label"
                  >
                    Release date
                  </label>
                  <input
                    class="form-control"
                    name="date"
                    placeholder="Select Date"
                    type="date"
                    value=""
                  />
                  <label
                    class="form-label"
                  >
                    Movie URL
                  </label>
                  <input
                    class="form-control"
                    name="url"
                    placeholder="Movie URL here"
                    type="url"
                    value=""
                  />
                  <label
                    class="form-label"
                  >
                    Example select
                  </label>
                  <div
                    class="select css-2b097c-container"
                  >
                    <div
                      class=" css-yk16xz-control"
                    >
                      <div
                        class=" css-g1d714-ValueContainer"
                      >
                        <div
                          class="css-1rhbuit-multiValue"
                        >
                          <div
                            class="css-12jo7m5"
                          >
                            Comedy
                          </div>
                          <div
                            class="css-xb97g8"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-6q0nyr-Svg"
                              focusable="false"
                              height="14"
                              viewBox="0 0 20 20"
                              width="14"
                            >
                              <path
                                d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                              />
                            </svg>
                          </div>
                        </div>
                        <div
                          class="css-1rhbuit-multiValue"
                        >
                          <div
                            class="css-12jo7m5"
                          >
                            Action
                          </div>
                          <div
                            class="css-xb97g8"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-6q0nyr-Svg"
                              focusable="false"
                              height="14"
                              viewBox="0 0 20 20"
                              width="14"
                            >
                              <path
                                d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                              />
                            </svg>
                          </div>
                        </div>
                        <div
                          class="css-b8ldur-Input"
                        >
                          <div
                            class=""
                            style="display: inline-block;"
                          >
                            <input
                              aria-autocomplete="list"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              id="react-select-4-input"
                              spellcheck="false"
                              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                            <div
                              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class=" css-1hb7zxy-IndicatorsContainer"
                      >
                        <div
                          aria-hidden="true"
                          class=" css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                        <span
                          class=" css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <label
                    class="form-label"
                  >
                    Overview
                  </label>
                  <input
                    class="form-control"
                    name="overview"
                    placeholder="Overview here"
                    type="text"
                    value=""
                  />
                  <label
                    class="form-label"
                  >
                    Runtime
                  </label>
                  <input
                    class="form-control"
                    name="runtime"
                    placeholder="Runtime here"
                    type="number"
                    value=""
                  />
                </div>
                <div
                  class="sc-bxivhb iodYpz"
                >
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    Reset
                  </button>
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    Save
                  </button>
                </div>
              </form>
            </div>
          </section>
        </div>
      </section>
      <section
        class="sc-gzVnrw kUQjQA"
      >
        <div
          class="modal"
        >
          <section
            class="modal-main"
          >
            <div
              class="sc-ifAKCX drmYPe"
            >
              <button
                class="close"
                type="button"
              >
                <span>
                  ×
                </span>
              </button>
              <h2>
                Delete Movie
              </h2>
            </div>
            <p>
              Are you sure you want to delete this movie?
            </p>
            <button
              class="btn btn-primary"
              type="button"
            >
              Confirm
            </button>
          </section>
        </div>
      </section>
      <header
        class="sc-gqjmRU bLsPVA"
      >
        <div
          class="sc-iwsKbI hgHcqO"
        >
          <button
            class="add-movie btn btn-outline-danger"
            type="button"
          >
            + Add movie
          </button>
          <h1>
            Find your movie
          </h1>
        </div>
        <div
          class="sc-dnqmqq jjsafO mb-3 input-group"
        >
          <input
            class="form-control"
            placeholder="Please write the film name"
            value=""
          />
          <div
            class="input-group-append"
          >
            <button
              class="btn btn-outline-danger"
              disabled=""
              type="button"
            >
              Search
            </button>
          </div>
        </div>
        <div
          class="types"
        >
          <div
            class="nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="All"
                href="#"
                role="button"
              >
                All
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="Documentary"
                href="#"
                role="button"
              >
                Documentary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="Comedy"
                href="#"
                role="button"
              >
                Comedy
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="Horror"
                href="#"
                role="button"
              >
                Horror
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="Crime"
                href="#"
                role="button"
              >
                Crime
              </a>
            </div>
          </div>
          <div>
            <p>
              Sort by
            </p>
            <div
              class="sc-gZMcBi hWBHcG dropdown"
            >
              <div
                class="drop dropdown"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="dropdown-toggle btn btn-secondary"
                  type="button"
                >
                  Rating
                </button>
                <div
                  aria-hidden="true"
                  class="dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Release date
                  </button>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Rating
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="count-movie"
        />
      </header>
    </div>
  </body>,
  "container": <div>
    <section
      class="sc-bZQynM jXrBaw"
    >
      <div
        class="modal"
      >
        <section
          class="modal-main"
        >
          <div
            class="sc-EHOje hYgIFK"
          >
            <form
              class=""
            >
              <div
                class="sc-ifAKCX drmYPe"
              >
                <button
                  class="close"
                  type="button"
                >
                  <span>
                    ×
                  </span>
                </button>
                <h2>
                  Edit movie
                </h2>
              </div>
              <div
                class="Edit movie form-group"
              >
                <label
                  class="form-label"
                >
                  Movie id
                </label>
                <input
                  class="form-control"
                  name="id"
                  placeholder="Id"
                  readonly=""
                  type="number"
                  value="1"
                />
                <label
                  class="form-label"
                >
                  Title
                </label>
                <input
                  class="form-control"
                  name="title"
                  placeholder="Title"
                  type="title"
                  value=""
                />
                <label
                  class="form-label"
                >
                  Release date
                </label>
                <input
                  class="form-control"
                  name="date"
                  placeholder="Select Date"
                  type="date"
                  value=""
                />
                <label
                  class="form-label"
                >
                  Movie URL
                </label>
                <input
                  class="form-control"
                  name="url"
                  placeholder="Movie URL here"
                  type="url"
                  value=""
                />
                <label
                  class="form-label"
                >
                  Example select
                </label>
                <div
                  class="select css-2b097c-container"
                >
                  <div
                    class=" css-yk16xz-control"
                  >
                    <div
                      class=" css-g1d714-ValueContainer"
                    >
                      <div
                        class="css-1rhbuit-multiValue"
                      >
                        <div
                          class="css-12jo7m5"
                        >
                          Comedy
                        </div>
                        <div
                          class="css-xb97g8"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-1rhbuit-multiValue"
                      >
                        <div
                          class="css-12jo7m5"
                        >
                          Action
                        </div>
                        <div
                          class="css-xb97g8"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-4-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                          />
                        </svg>
                      </div>
                      <span
                        class=" css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <label
                  class="form-label"
                >
                  Overview
                </label>
                <input
                  class="form-control"
                  name="overview"
                  placeholder="Overview here"
                  type="text"
                  value=""
                />
                <label
                  class="form-label"
                >
                  Runtime
                </label>
                <input
                  class="form-control"
                  name="runtime"
                  placeholder="Runtime here"
                  type="number"
                  value=""
                />
              </div>
              <div
                class="sc-bxivhb iodYpz"
              >
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Reset
                </button>
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Save
                </button>
              </div>
            </form>
          </div>
        </section>
      </div>
    </section>
    <section
      class="sc-gzVnrw kUQjQA"
    >
      <div
        class="modal"
      >
        <section
          class="modal-main"
        >
          <div
            class="sc-ifAKCX drmYPe"
          >
            <button
              class="close"
              type="button"
            >
              <span>
                ×
              </span>
            </button>
            <h2>
              Delete Movie
            </h2>
          </div>
          <p>
            Are you sure you want to delete this movie?
          </p>
          <button
            class="btn btn-primary"
            type="button"
          >
            Confirm
          </button>
        </section>
      </div>
    </section>
    <header
      class="sc-gqjmRU bLsPVA"
    >
      <div
        class="sc-iwsKbI hgHcqO"
      >
        <button
          class="add-movie btn btn-outline-danger"
          type="button"
        >
          + Add movie
        </button>
        <h1>
          Find your movie
        </h1>
      </div>
      <div
        class="sc-dnqmqq jjsafO mb-3 input-group"
      >
        <input
          class="form-control"
          placeholder="Please write the film name"
          value=""
        />
        <div
          class="input-group-append"
        >
          <button
            class="btn btn-outline-danger"
            disabled=""
            type="button"
          >
            Search
          </button>
        </div>
      </div>
      <div
        class="types"
      >
        <div
          class="nav"
        >
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rb-event-key="All"
              href="#"
              role="button"
            >
              All
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rb-event-key="Documentary"
              href="#"
              role="button"
            >
              Documentary
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rb-event-key="Comedy"
              href="#"
              role="button"
            >
              Comedy
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rb-event-key="Horror"
              href="#"
              role="button"
            >
              Horror
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rb-event-key="Crime"
              href="#"
              role="button"
            >
              Crime
            </a>
          </div>
        </div>
        <div>
          <p>
            Sort by
          </p>
          <div
            class="sc-gZMcBi hWBHcG dropdown"
          >
            <div
              class="drop dropdown"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-secondary"
                type="button"
              >
                Rating
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Release date
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Rating
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="count-movie"
      />
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
